[metadata]
name = pyprint
version = attr: pyprint.__version__
author = Martin Stefanik
author_email = stefanik.mar@gmail.com
maintainer = Martin Stefanik
maintainer_email = stefanik.mar@gmail.com
url = https://github.com/martinstefanik/pyprint
description = CLI tool for easy printing multiple files from command line
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = CLI, printing

[options]
zip_safe = true
python_requires = >= 3.6
py_modules = pyprint
setup_requires =
    setuptools >=46.4.0
install_requires =
    click >=7.1.2

[options.extras_require]
dev =
    tox

[options.entry_points]
console_scripts =
    pyprint = pyprint:main

[check]
metadata = true
strict = true

[sdist]
formats = zip, gztar

[flake8]
exclude =  .eggs, .git, __pycache__, .tox, .vscode, build/, dist/
max_line_length = 80
extend_ignore = D205, D212, D415, E203
docstring_convention = google

[isort]
profile = black
line_length = 80
filter_files = true
